ghc/compiler/tests/typecheck/should_fail/tcfail031.hs

f x = if 'a' then 1 else 2
